# life-wasm

./: .gitignore  Cargo.toml  index.html  index.js  package-lock.json  package.json
.github/workflows/: webpack.yml
pkg/: README.md  life_wasm.d.ts  life_wasm.js  life_wasm_bg.js  life_wasm_bg.wasm  life_wasm_bg.wasm.d.ts  package.json
src/: lib.rs  life.rs
